[metadata]
name = eyeball_pp
version = 0.0.1
description = A python package for evaluating tasks which use llms
long_description = file: README.md
long_description_content_type = text/markdown
author = Revant
author_email= revant.kapoor@gmail.com
url = https://github.com/revantk/eyeball-plus-plus
license_files=LICENSE
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages=find: 

[options.packages.find]
include=
    eyeball_pp*
