[metadata]
name = eyeball_pp
version = 0.0.15
description = A python package for evaluating tasks which use llms
long_description = file: README.md
long_description_content_type = text/markdown
author = Revant
author_email= revant.kapoor@gmail.com
url = https://github.com/revantk/eyeball-plus-plus
license_files=LICENSE
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent

scripts=
    scripts/eyeball_server.py

[options]
packages=find: 

[options.packages.find]
include=
    eyeball_pp*

[options.entry_points]
console_scripts =
    evaluate_system = eyeball_pp:evaluate_system_cmd
    rate_recorded_examples = eyeball_pp:rate_recorded_examples_cmd
